--- a/index.html
+++ b/index.html
@@ -542,6 +542,18 @@
                   <a href="assets/img/portfolio/DQL-SQL-Phyton.PNG" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
+              <div class="portfolio-content h-100">
+                <a href="https://drive.google.com/file/d/1MnJgkui4PTFe7AxzFBPCYEjCjNw1uJnm/view?usp=sharing" title="TRIAS" target="_blank">
+                  <img src="assets/img/portfolio/trias.PNG" class="img-fluid" alt="DQLab">
+                </a>
+                <div class="portfolio-info">
+                  <h4>TRIAS ACADEMY</h4>
+                  <p>7 DAYS PUBLIC SPEAKING CHALLENGE BY TRIAS ACADEMY</p>
+                  <a href="assets/img/portfolio/trias.PNG" title="TRIAS" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
             </div><!-- End Portfolio DQLab Item -->
           </div><!-- End Portfolio Container -->
         </div>
