--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
                 <a href="https://drive.google.com/file/d/1MnJgkui4PTFe7AxzFBPCYEjCjNw1uJnm/view?usp=sharing" title="TRIAS" target="_blank">
-                  <img src="assets/img/portfolio/trias.PNG" class="img-fluid" alt="DQLab">
+                  <img src="assets/img/portfolio/trias.PNG" class="img-fluid" alt="TRIAS">
                 </a>
                 <div class="portfolio-info">
                   <h4>TRIAS ACADEMY</h4>
@@ -554,7 +554,7 @@
                   <a href="assets/img/portfolio/trias.PNG" title="TRIAS" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio DQLab Item -->
+            </div><!-- End Portfolio TRIAS Item -->
           </div><!-- End Portfolio Container -->
         </div>
       </div>
