--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
                 <a href="https://drive.google.com/file/d/1MnJgkui4PTFe7AxzFBPCYEjCjNw1uJnm/view?usp=sharing" title="TRIAS" target="_blank">
                   <img src="assets/img/portfolio/trias.PNG" class="img-fluid" alt="TRIAS">
@@ -566,7 +566,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>For more informations</p>
+        <p>For more information.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
