--- a/index.html
+++ b/index.html
@@ -542,6 +542,7 @@
                   <a href="assets/img/portfolio/DQL-SQL-Phyton.PNG" title="DQLab" data-gallery="portfolio-gallery-achievement" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-achievement">
               <div class="portfolio-content h-100">
