--- a/index.html
+++ b/index.html
@@ -215,19 +215,22 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>My name is Muhammad Abdillah, born in Jakarta on March 24, 2003. I began my career in November 2021 
+        <p>My name is Muhammad Abdillah, born in Jakarta on March 24, 2003. I am an Information Technology student 
+          at Universitas Pamulang. In addition, I received some training in the fields of communication, IT, ,data 
+          analysis, and Japanesse Language. Besides those, I have some professional experiences in several companies.
+        <p>I began my career in November 2021, 
           at PT. Sari Indah Lestari as a Staff Administration of Promotion for CBD Ciledug Family Mall. In 
           April 2022, I advanced to the role of Staff of Tenant Relations & Customer Service, focusing on 
-          tenant satisfaction.</p> <br>
+          tenant satisfaction.</p><br>
         <p>In December 2023, I joined MyRepublic as an Account Executive, where I successfully exceeded sales 
           targets in February and March 2024 through direct customer engagement. Since December 2024, I have been 
-          interning as an Account Manager at RKP Management, managing client relationships with brands and sellers, 
+          working as an Account Manager at RKP Management, managing client relationships with brands and sellers, 
           monitoring campaign performance, and preparing KPI reports covering metrics like order volume, traffic, 
           and engagement.</p><br>
         <p>Outside work, I enjoy networking on LinkedIn and sharing moments on Instagram. I am eager to embrace 
           new challenges and continue growing professionally.</p><br>
         <a href="https://drive.google.com/file/d/14nSWO6R1maF7ZyJfKXYUMRDEpJXJtspi/view?usp=sharing" title="Resume" target="_blank">
-          Download My Curriculum Vintae for More Details
+          My Curriculum Vintae
         </a>
       </div><!-- End Section Title -->
       
@@ -240,13 +243,7 @@
 
             <div class="resume-item pb-0">
               <h4>Muhammad Abdillah</h4>
-              <p><em>Hi! My name is Muhammad Abdillah. I was born in Jakarta on March 24, 2003. I am still an Information Technology student 
-                at Universitas Pamulang. I have some professional experiences in several companies. In addition, I received some 
-                training in the fields of communication, IT, ,data analysis, and Japanesse Language.</em></p>
-              <ul>
-                <li>Tangerang City</li>
-                <li>mabdillah953@gmail.com</li>
-              </ul>
+              <p><em>Hi! My full name is Muhammad Abdillah. Here's my journey as a professional gen z worker. </em></p>
             </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
@@ -273,12 +270,12 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>RKP Management</h4>
+              <h4>Account Manager</h4>
               <h5>December 2024 – Present</h5>
               <p><em>RKP Management, Tangerang </em></p>
               <ul>
                 <li>Managed and maintained relationships with clients, 
-                  including brands and sellers, to ensure satisfaction and smooth collaboration.</li>
+                  including brands and sellers, to ensure satisfaction and smooth collaboration with Shopee and Tiktok creators.</li>
                 <li>Monitored campaign performance to evaluate effectiveness.</li>
                 <li>Prepared KPI reports, including metrics such as order volume, traffic, and engagement.</li>
               </ul>
