--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Hi! I am a student at University of Pamulang.</p>
+        <p>Hi, there! Welcome to my personal portfolio!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/ava2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/prof.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>About Me</h2>
             <p class="fst-italic py-3">
-              "Living my dream."
+              I'm about to sharing my story and achievement!
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -118,17 +118,20 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Science Major High School</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              I'm an ambitious and adaptable individual passionate about continuously developing my skills
-               in various fields. With a background in science and a keen interest in technology, photography
-               , data analysis, and creative projects. I am eager to contribute to projects and 
-               opportunities, esspecially align with my expertise and aspirations.
+              I am an ambitious and adaptable individual with a strong passion for continuous 
+              learning and growth across various fields. With a background in science and a deep 
+              interest in technology, photography, data analysis, and creative projects, I am eager to 
+              contribute to meaningful initiatives—especially those that align with my expertise and long-term aspirations.
             </p>
+            <a href="https://drive.google.com/file/d/14nSWO6R1maF7ZyJfKXYUMRDEpJXJtspi/view?usp=sharing" title="Resume" target="_blank">
+              My Curriculum Vintae
+            </a>
           </div>
         </div>
 
@@ -194,13 +197,6 @@
               </div>
             </div><!-- End Skills Item -->
 
-            <div class="progress">
-              <span class="skill"><span>Design</span> <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
           </div>
 
         </div>
@@ -215,23 +211,17 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>My name is Muhammad Abdillah, born in Jakarta on March 24, 2003. I am an Information Technology student 
-          at Universitas Pamulang. In addition, I received some training in the fields of communication, IT, ,data 
-          analysis, and Japanesse Language. Besides those, I have some professional experiences in several companies.
-        <p>I began my career in November 2021, 
-          at PT. Sari Indah Lestari as a Staff Administration of Promotion for CBD Ciledug Family Mall. In 
-          April 2022, I advanced to the role of Staff of Tenant Relations & Customer Service, focusing on 
-          tenant satisfaction.</p><br>
-        <p>In December 2023, I joined MyRepublic as an Account Executive, where I successfully exceeded sales 
-          targets in February and March 2024 through direct customer engagement. Since December 2024, I have been 
-          working as an Account Manager at RKP Management, managing client relationships with brands and sellers, 
-          monitoring campaign performance, and preparing KPI reports covering metrics like order volume, traffic, 
-          and engagement.</p><br>
-        <p>Outside work, I enjoy networking on LinkedIn and sharing moments on Instagram. I am eager to embrace 
-          new challenges and continue growing professionally.</p><br>
-        <a href="https://drive.google.com/file/d/14nSWO6R1maF7ZyJfKXYUMRDEpJXJtspi/view?usp=sharing" title="Resume" target="_blank">
-          My Curriculum Vintae
-        </a>
+        <p>My name is Muhammad Abdillah, an Information Technology student at Universitas Pamulang, born in Jakarta on March 24, 
+          2003. Alongside my academic journey, I have received training in communication, IT, data analysis, and Japanese language.</p><br>
+        <p>I began my professional career in November 2021 at PT. Sari Indah Lestari as a Promotion Administration Staff for CBD Ciledug 
+          Family Mall. In April 2022, I advanced to a Tenant Relations & Customer Service Staff role, where I focused on tenant satisfaction 
+          and daily operations.</p><br>
+        <p>In December 2023, I joined MyRepublic as an Account Executive, successfully exceeding sales targets in February and March 2024 
+          through direct client engagement. Since December 2024, I have been serving as an Account Manager at RKP Management, where I manage 
+          client relationships with brands and sellers, monitor campaign performance, and prepare KPI reports covering key metrics such as order 
+          volume, traffic, and engagement.</p><br>
+        <p>Outside of work, I enjoy networking through LinkedIn and sharing creative moments on 
+          Instagram. I am always eager to embrace new challenges and continue developing both personally and professionally.</p><br>
       </div><!-- End Section Title -->
       
       <div class="container">
