--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
               interest in technology, photography, data analysis, and creative projects, I am eager to 
               contribute to meaningful initiatives—especially those that align with my expertise and long-term aspirations.
             </p>
-            <a href="https://drive.google.com/file/d/14nSWO6R1maF7ZyJfKXYUMRDEpJXJtspi/view?usp=sharing" title="Resume" target="_blank">
-              My Curriculum Vintae
+            <a href="https://docs.google.com/document/d/1kuuyFb4MA9AmiVD-umI_3EYrR4W4WQNK/edit?usp=sharing&ouid=110008483672455538705&rtpof=true&sd=true" title="Resume" target="_blank">
+              Click here for more about me!
             </a>
           </div>
         </div>
@@ -149,7 +149,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>I possess strong skills across multiple disciplines.</p>
+        <p>I have developed skills to support work across multiple functions.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
