--- a/index.html
+++ b/index.html
@@ -264,10 +264,11 @@
               <h5>December 2024 – Present</h5>
               <p><em>RKP Management, Tangerang </em></p>
               <ul>
-                <li>Managed and maintained relationships with clients, 
-                  including brands and sellers, to ensure satisfaction and smooth collaboration with Shopee and Tiktok creators.</li>
-                <li>Monitored campaign performance to evaluate effectiveness.</li>
-                <li>Prepared KPI reports, including metrics such as order volume, traffic, and engagement.</li>
+                <li>Managed and nurtured relationships with clients, including brands and sellers, 
+                  ensuring smooth collaboration with Shopee and TikTok creators.</li>
+                <li>Monitored campaign performance to assess effectiveness and alignment with client goals.</li>
+                <li>Prepared detailed KPI reports covering key metrics such as order volume, traffic, and engagement.</li>
+                <li>Matched brands with suitable creators to optimize campaign outcomes and audience reach.</li>
               </ul>
             </div><!-- End Resume Item -->
             
@@ -284,18 +285,6 @@
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Tenant Relation Staff</h4>
-              <h5>April 2022 - September 2023</h5>
-              <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City</em></p>
-              <ul>
-                <li>Provided administrative services and handled tenant complaints.</li>
-                <li>Reported mall conditions to management every two hours.</li>
-                <li>Conducted regular inspections of tenants, especially F&B outlets.</li>
-                <li>Executed tasks assigned by the Leader, Supervisor, and Chief.</li>
-              </ul>
-            </div><!-- End Resume Item -->
-
-            <div class="resume-item">
               <h4>Promotion Staff</h4>
               <h5>November 2021 - April 2022</h5>
               <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City </em></p>
@@ -305,6 +294,13 @@
                 <li>Designed event posters and celebratory greetings.</li>
                 <li>Handled the mall’s social media accounts (Instagram, YouTube, Facebook, etc.).</li>
                 <li>Promoted tenant products and media advertising services.</li>
+              <h4>Tenant Relation Staff</h4>
+              <h5>April 2022 - September 2023</h5>
+              <ul>
+                <li>Provided administrative services and handled tenant complaints.</li>
+                <li>Reported mall conditions to management every two hours.</li>
+                <li>Conducted regular inspections of tenants, especially F&B outlets.</li>
+                <li>Executed tasks assigned by the Leader, Supervisor, and Chief.</li>
               </ul>
             </div><!-- End Resume Item -->
 
