--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Account Manager</h4>
+              <h4>RKP Manajemen, Tangerang</h4>
               <h5>December 2024 – Present</h5>
-              <p><em>RKP Management, Tangerang </em></p>
+              <p><em>Account Manager</em></p>
               <ul>
                 <li>Managed and nurtured relationships with clients, including brands and sellers, 
                   ensuring smooth collaboration with Shopee and TikTok creators.</li>
@@ -273,9 +273,9 @@
             </div><!-- End Resume Item -->
             
             <div class="resume-item">
-              <h4>Account Executive</h4>
+              <h4>MyRepublik, South Tangerang</h4>
               <h5>November 2023 - May 2024</h5>
-              <p><em>MyRepublik, South Tangerang </em></p>
+              <p><em>Account Executive</em></p>
               <ul>
                 <li>Sold company products (home internet).</li>
                 <li>Followed up on customer complaints to management.</li>
@@ -285,22 +285,21 @@
             </div><!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Promotion Staff</h4>
-              <h5>November 2021 - April 2022</h5>
-              <p><em>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City </em></p>
+              <h4>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City</h4>
+              <h5>November 2021 - September 2023</h5>
+              <p><em>Promotion Staff (November 2021 - April 2022)</em></p>
               <ul>
                 <li>Planned, executed, and documented mall events.</li>
-                <li>Managed promotion data, assets, and documents.</li>
-                <li>Designed event posters and celebratory greetings.</li>
-                <li>Handled the mall’s social media accounts (Instagram, YouTube, Facebook, etc.).</li>
-                <li>Promoted tenant products and media advertising services.</li>
-              <h4>Tenant Relation Staff</h4>
-              <h5>April 2022 - September 2023</h5>
+                <li>Handled social media platforms (Instagram, YouTube, Facebook).</li>
+                <li>Promoted tenant products and mall media advertising services.</li>
+                <li>Designed promotional posters and celebratory graphics.</li>
+                <li>Managed division data, assets, and documents.</li>
+              <p><em>Tenant Relation (April 2022 - September 2023)</em></p>
               <ul>
                 <li>Provided administrative services and handled tenant complaints.</li>
-                <li>Reported mall conditions to management every two hours.</li>
-                <li>Conducted regular inspections of tenants, especially F&B outlets.</li>
-                <li>Executed tasks assigned by the Leader, Supervisor, and Chief.</li>
+                <li>Conducted regular mall inspections, especially for F&B tenants.</li>
+                <li>Submitted mall condition reports to management every two hours.</li>
+                <li>Executed tasks assigned by team leaders, supervisors, and chief management.</li>
               </ul>
             </div><!-- End Resume Item -->
 
