--- a/index.html
+++ b/index.html
@@ -287,21 +287,25 @@
             <div class="resume-item">
               <h4>PT. SIL, Management of CBD Ciledug Family Mall, Tangerang City</h4>
               <h5>November 2021 - September 2023</h5>
+
               <p><em>Promotion Staff (November 2021 - April 2022)</em></p>
               <ul>
                 <li>Planned, executed, and documented mall events.</li>
-                <li>Handled social media platforms (Instagram, YouTube, Facebook).</li>
+                 <li>Handled social media platforms (Instagram, YouTube, Facebook).</li>
                 <li>Promoted tenant products and mall media advertising services.</li>
-                <li>Designed promotional posters and celebratory graphics.</li>
-                <li>Managed division data, assets, and documents.</li>
-              <p><em>Tenant Relation (April 2022 - September 2023)</em></p>
+                 <li>Designed promotional posters and celebratory graphics.</li>
+                 <li>Managed division data, assets, and documents.</li>
+              </ul>
+
+              <p><em>Tenant Relation Staff (April 2022 - September 2023)</em></p>
               <ul>
                 <li>Provided administrative services and handled tenant complaints.</li>
-                <li>Conducted regular mall inspections, especially for F&B tenants.</li>
-                <li>Submitted mall condition reports to management every two hours.</li>
+                 <li>Conducted regular mall inspections, especially for F&B tenants.</li>
+                 <li>Submitted mall condition reports to management every two hours.</li>
                 <li>Executed tasks assigned by team leaders, supervisors, and chief management.</li>
               </ul>
             </div><!-- End Resume Item -->
+
 
           </div>
 
