--- a/index.html
+++ b/index.html
@@ -387,16 +387,24 @@
             </div><!-- End Portfolio SoloLearn JS Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
-              <div class="portfolio-content h-100">
-                <a href="https://muhabdil.github.io/utsabdillah/" title="UTS" target="_blank">
-                  <img src="assets/img/portfolio/uts.PNG" class="img-fluid" alt="UTS">
-                </a>
-                <div class="portfolio-info">
-                  <h4>Dashboard</h4>
-                  <p>My UTS project at "Pemrograman Web 1" class.</p>
-                  <a href="assets/img/portfolio/form_login.PNG" title="FORM LOGIN" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <div class="portfolio-content h-100">
+              <img src="assets/img/portfolio/uts.PNG" class="img-fluid" alt="UTS">
+
+              <div class="portfolio-info">
+                <h4>HRIS</h4>
+                  <p>My first system project. (it's just preview)</p>
+      
+                      <!-- Multiple buttons/links -->
+                      <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+                        <a href="https://muhabdil.github.io/hris-employee/" title="Employee" target="_blank" class="btn btn-sm btn-primary">Employee</a>
+                        <a href="https://muhabdil.github.io/hris-ceo/" title="CEO" target="_blank" class="btn btn-sm btn-success">CEO</a>
+                        <a href="https://muhabdil.github.io/hris-hrd/" title="HRD" target="_blank" class="btn btn-sm btn-warning">HRD</a>
+                        </div>
+      
+                         <!-- Optional: image preview -->
+                        <a href="assets/img/portfolio/uts.PNG" title="Dashboard" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    </div>
                 </div>
-              </div>
             </div><!-- End Portfolio UTS -->
 
 
