--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
               <div class="portfolio-info">
                 <h4>HRIS</h4>
-                  <p>My first system project. (it's just preview)</p>
+                  <p>My first system project. (presensi-rkpmanajemen.com)</p>
       
                       <!-- Multiple buttons/links -->
                       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
