--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-project">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/uts.PNG" class="img-fluid" alt="UTS">
+              <img src="assets/img/portfolio/uts.png" class="img-fluid" alt="UTS">
 
               <div class="portfolio-info">
                 <h4>HRIS</h4>
@@ -402,7 +402,7 @@
                         </div>
       
                          <!-- Optional: image preview -->
-                        <a href="assets/img/portfolio/uts.PNG" title="Dashboard" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                        <a href="assets/img/portfolio/uts.png" title="Dashboard" data-gallery="portfolio-gallery-project" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                     </div>
                 </div>
             </div><!-- End Portfolio UTS -->
